--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "indev-assignment",
+  "name": "future-skills-assignment",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
